# Codalith

./: .dockerignore  .env.example  .env.ue.example  .gitattributes  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/datasets/: sample-smoke.jsonl  ue-holdout.jsonl  ue-regression.jsonl
configs/: corpus_registry.json  corpus_registry.yaml  mcp_server.yaml  registry.toml  source-policy.toml  source_policy.json  source_priors.json  ue_5_7_4_registry.json  ue_seed_cards.json  ue_source_priors.json
configs/corpora/ue-5.7.4/: registry.json  store_manifest.json
configs/sample/: registry.json  seed_cards.json
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
dashboard/src/components/: Activity.tsx  Charts.tsx  Chrome.tsx  Icons.tsx  Metrics.tsx
dashboard/src/hooks/: useDashboard.ts
dashboard/src/lib/: format.test.ts  format.ts
docs/: Codalith_CodeRAG_Design.md  UE_Context_Engine_CodeRAG_Design.md  architecture.md  configuration.md  evaluation.md  mcp-api.md  operations.md
eval/benchmarks/: ue57_common_issues_mcp_eval.md
eval/configs/: ue_5_7_4_registry.json  ue_seed_cards.json
eval/datasets/: sample_eval_suite.jsonl  ue50.jsonl  ue57_common_issues_30.jsonl  ue_eval_suite.jsonl
fixtures/project_overlay/ProjectA/Source/ProjectA/: ProjectA.Build.cs
fixtures/project_overlay/ProjectA/Source/ProjectA/Private/: InventoryComponent.cpp
fixtures/sample_corpus/docs/: architecture.md
fixtures/sample_corpus/src/core/: cache.py  events.py
jobs/: __init__.py  backup_coderag_store.py  coderag_acceptance.py  common.py  extract_semantic.py  generate_cards.py  index_corpus.py  index_engine.py  index_generated.py  index_project.py  publish_corpus.py  run_eval.py  semantic_status.py  ue_eval.py  verify_cards.py
scripts/: install-mcp-client.ps1  install-mcp-client.sh  normalize_eval_dataset.py  ue-mcp-eval.sh
src/codalith/: __init__.py  config.py  errors.py  text.py
src/codalith/benchmarks/: __init__.py  models.py  runner.py
src/codalith/cards/: __init__.py  generator.py  hashing.py  parser.py  renderer.py  repository.py  schema.py  verifier.py
src/codalith/cli/: __init__.py  coderag_acceptance.py  common.py  generate_cards.py  index_corpus.py  main.py  semantic_status.py  ue_eval.py  verify_cards.py
src/codalith/coderag/: __init__.py  adapter.py  backend.py  local_backend.py  local_index.py  native.py  native_backend.py  query_builder.py  result_mapper.py  types.py
src/codalith/compiler/: __init__.py  context_compiler.py  context_pack.py  entity_detector.py  evidence_selector.py  intent_detector.py  model_reranker.py  reranker.py  retrieval_planner.py  source_locator.py
src/codalith/corpus/: __init__.py  globs.py  registry.py  source_policy.py  source_reader.py  store_manifest.py  uri_resolver.py  uris.py
src/codalith/dashboard/: __init__.py  telemetry.py
src/codalith/eval/: common.py  mcp_runner.py  metrics.py  runner.py
src/codalith/gateway/: audit.py  auth.py  errors.py  http_server.py  mcp_server.py  prompts.py  resources.py  sdk_server.py  tools.py
src/codalith/indexing/: __init__.py
src/codalith/indexing/coderag/: __init__.py  backend.py
src/codalith/indexing/structure/: __init__.py  builder.py  models.py  schema.py  store.py
src/codalith/languages/: __init__.py  base.py  cpp_ue.py  csharp.py  generic.py  python.py
src/codalith/mcp/: __init__.py  http.py  schemas.py  server.py  stdio.py
src/codalith/query/: __init__.py  models.py  service.py
src/codalith/semantic/: __init__.py  db.py  graph.py  schema_postgres.sql  types.py
src/codalith/semantic/extractors/: __init__.py  build_cs.py  common.py  compile_guards.py  cpp_symbols.py  target_cs.py  uht_reflection.py  unreal.py  uplugin.py  uproject.py
src/codalith/semantic/store/: __init__.py  connection.py  queries.py  schema.py  schema.sql  schema_postgres.sql  writers.py
src/ue_context/: __init__.py  config.py  errors.py
src/ue_context/cards/: generator.py  renderer.py  schema.py  verifier.py
src/ue_context/coderag/: __init__.py  adapter.py  query_builder.py  result_mapper.py
src/ue_context/compiler/: context_compiler.py  context_pack.py  evidence_selector.py  intent_detector.py  reranker.py  retrieval_planner.py  source_locator.py
src/ue_context/corpus/: registry.py  source_policy.py  uri_resolver.py
src/ue_context/eval/: __init__.py  metrics.py  runner.py
src/ue_context/gateway/: __init__.py  audit.py  auth.py  errors.py  http_server.py  mcp_server.py  prompts.py  resources.py  tools.py
src/ue_context/semantic/: __init__.py  db.py  graph.py  schema.sql
src/ue_context/semantic/extractors/: __init__.py  compile_guards.py  generated_code.py  target_cs.py  uplugin.py  uproject.py
tests/: conftest.py  test_acceptance_jobs.py  test_benchmarks.py  test_cards_eval.py  test_cli.py  test_coderag_acceptance.py  test_coderag_and_tools.py  test_compiler_detectors.py  test_config.py  test_configuration.py  test_corpus_acceptance.py  test_dashboard.py  test_eval_metrics.py  test_indexing.py  test_languages.py  test_mcp.py  test_mcp_eval_runner.py  test_mcp_http.py  test_mcp_stdio.py  test_query.py  test_registry_uri_policy.py  test_reranker.py  test_reranker_and_mcp_eval.py  test_semantic_extractors.py  test_semantic_store.py  test_text_primitives.py  test_ue57_common_issue_benchmark.py  test_ue_acceptance.py  test_ue_eval_suite_benchmark.py
tests/eval/: conftest.py  test_ue_eval_suite_benchmark.py
(+1 files in other folders)
