[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codalith"
version = "0.1.0"
description = "Corpus-aware source context MCP gateway powered by a CodeRAG adapter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
codalith-mcp = "codalith.gateway.mcp_server:main"
codalith-mcp-http = "codalith.gateway.http_server:main"
codalith-eval = "codalith.eval.runner:main"
codalith-mcp-eval = "codalith.eval.mcp_runner:main"
codalith-generate-cards = "jobs.generate_cards:main"
codalith-verify-cards = "jobs.verify_cards:main"
codalith-index-engine = "jobs.index_engine:main"
codalith-index-generated = "jobs.index_generated:main"
codalith-extract-semantic = "jobs.extract_semantic:main"
codalith-index-project = "jobs.index_project:main"
codalith-coderag-acceptance = "jobs.coderag_acceptance:main"
codalith-backup-coderag-store = "jobs.backup_coderag_store:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["codalith*", "jobs*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]
norecursedirs = ["external", ".venv", "build", "dist"]
markers = [
    "corpus_acceptance: optional tests that require a mounted real source corpus",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "jobs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
exclude = ["external/", ".venv/", "build/"]

[[tool.mypy.overrides]]
module = ["tests.*", "jobs.*"]
disallow_untyped_defs = false
