[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codalith"
version = "0.2.0"
description = "Local-first, versioned source intelligence for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.5,<5",
    "coderag[openai]==1.0.0",
    "mcp<2",
    "pydantic>=2.11,<3",
    "starlette>=0.37,<2",
    "tree-sitter>=0.25.2,<0.26",
    "tree-sitter-c-sharp>=0.23.5,<0.24",
    "tree-sitter-cpp>=0.23.4,<0.24",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
codalith = "codalith.cli.main:main"

[tool.uv.sources]
coderag = { path = "external/CodeRAG", editable = false }

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["codalith*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["external", ".venv", "build", "dist"]
markers = [
    "corpus_acceptance: optional tests that require a mounted real source corpus",
    "ue_acceptance: optional tests that require the real UE source and native embedding store",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
exclude = ["external/", ".venv/", "build/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["coderag", "coderag.*"]
ignore_missing_imports = true
